improve userservice